# Vaultak

./: Dockerfile  README.md  index.html  nixpacks.toml  setup.py
agentbreaker/: __init__.py  core.py  interceptor.py
backend/: blog_ai-agent-policy-enforcement.html  blog_ai-agent-security-best-practices.html  blog_ai-agent-security-not-optional-2026.html  blog_ai-agent-what-happens-when-rogue.html  blog_hidden-costs-unsecured-ai-agent.html  blog_how-to-add-access-control-ai-agents.html  blog_how-to-add-guardrails-to-claude-agents.html  blog_how-to-add-kill-switch-ai-agent.html  blog_how-to-audit-ai-agent-actions.html  blog_how-to-deploy-ai-agents-safely.html  blog_how-to-enforce-least-privilege-ai-agents.html  blog_how-to-limit-ai-agent-capabilities.html  blog_how-to-monitor-ai-agent-actions.html  blog_how-to-monitor-ai-agents-in-production.html  blog_how-to-prevent-ai-agent-data-deletion.html  blog_how-to-prevent-ai-agent-sensitive-data-access.html  blog_how-to-prevent-prompt-injection-ai-agents.html  blog_how-to-roll-back-ai-agent-damage.html  blog_how-to-secure-autogpt-agents.html  blog_how-to-secure-crewai-agents.html  blog_how-to-secure-langgraph-agents.html  blog_how-to-secure-openai-assistants.html  blog_how-to-test-ai-agent-security.html  blog_index.html  download.html  index.html  main.py  main.py.bak  requirements.txt  scan.html  vaultak_pii.py  vaultak_redteam.py  vaultak_shadow_ai.py  whitepaper.html
mcp/: README.md  pyproject.toml  server.py  smithery.yaml
sentry/: setup.py  (+1 more)
sentry-app/: build_mac.sh  requirements_app.txt  vaultak_sentry_app.py
(+2 files in other folders)
