[project]
name = "vaultak-mcp"
version = "1.0.0"
description = "Vaultak MCP Server — AI agent runtime security for Claude, Cursor, and any MCP-compatible assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
vaultak-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
